# devops.overseer

./: .flake8  .pre-commit-config.yaml  404.html  README.md  getting-started.html  index.html  mkdocs.yml  pyproject.toml  requirements.dev.txt
.github/actions/: Dockerfile  entrypoint.sh
.github/workflows/: ci.deploy.yml  ci.mkdocs.yml
clients/: client-configuration.html
docs/: getting-started.md  index.md
docs/clients/: client-configuration.md
open-api-specs/: confluence-cloud.json  jira-cloud-agile.json  jira-cloud.json  jira-org.json  jira-teams copy.json
scripts/: ci.deploy.build.bootstrap.sh
search/: search_index.json
src/devopso/: __init__.py  cli.py
src/devopso/adapters/: atlassian_adapter.py  jira_cloud_adapter.py
src/devopso/clients/confluence_cloud/: __init__.py  client.py
src/devopso/clients/confluence_cloud/models/: __init__.py  create_page_request.py  create_page_request_body.py  page_nested_body_write.py  update_page_request.py
src/devopso/clients/github/: configuration.py
src/devopso/clients/jira_cloud/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
src/devopso/clients/jira_cloud/api/: __init__.py  announcement_banner_api.py  app_data_policies_api.py  app_migration_api.py  app_properties_api.py  application_roles_api.py  audit_records_api.py  avatars_api.py  classification_levels_api.py  dashboards_api.py  dynamic_modules_api.py  (+86 more)
src/devopso/clients/jira_teams/: rest.py
src/devopso/core/: configuration.py  rest_adapter.py  rest_client.py
src/devopso/resources/configs/: logging.yml
tests/: test_cli.py
(+840 files in other folders)
