[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-overseer"
dynamic = ["version"]
description = "DevOps overseer to manage process automations and conformity"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [{ name = "mot0ko", email = "dourval.clement@gmail.com" }]

# Runtime dependencies
dependencies = [
  # "requests>=2.31",
]

# Optional: console scripts
[project.scripts]
devops-overseer = "devopso.cli:main"

# Project links shown on PyPI sidebar
[project.urls]
Homepage = "https://github.com/mot0ko/devops.overseer"
# Documentation = "https://readthedocs.org/"
Source = "https://github.com/mot0ko/devops.overseer"
Issues = "https://github.com/mot0ko/devops.overseer/issues"

# (Optional) Fine-tune package discovery if your code lives in src/
[tool.setuptools.packages.find]
where = ["src"]  # remove this section if you DON'T use a src layout

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
